ansible/roles/iptables/files/rules.v4
# set defaults
*filter
:INPUT ACCEPT
:OUTPUT ACCEPT
:ICMP REJECT
:BLACKLIST DROP

# accept all on LAN, local and established connections
-A INPUT -i enp0s8 -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -m state --state ESTABLISHED -j ACCEPT

# drop spoofing and blacklisted addresses and UDP connections
-A INPUT -m set --match-set BLACKLIST src -j DROP
-A INPUT -i enp0s9 -s 192.168.56.1/30 -j DROP
-A INPUT -p udp -j DROP

# configure BLACKLIST chain
-A BLACKLIST -j SET --add-set BLACKLIST src
-A BLACKLIST -j LOG --log-prefix "IP blacklisted: "
-A BLACKLIST -j DROP

# drop all invalid packets
-A INPUT -m state --state INVALID -j DROP
-A FORWARD -m state --state INVALID -j DROP
-A OUTPUT -m state --state INVALID -j DROP

# stop icmp-based attacks (e.g. rewriting routing table cache via REDIRECT)
-A INPUT -p icmp -j ICMP
-A ICMP -p icmp --icmp-type 3 -j ACCEPT
-A ICMP -p icmp --icmp-type 12 -j ACCEPT
-A ICMP -p icmp --icmp-type 8 -j ACCEPT
-A ICMP -j REJECT

# blacklist port scanners
-A INPUT -p tcp -m osf --genre NMAP -j BLACKLIST
-A INPUT -p tcp -m multiport ! --dports 80,443,2222 -j BLACKLIST

# meaningless TCP frames
-A INPUT -p tcp -m tcp --tcp-flags FIN,ACK FIN -j DROP
-A INPUT -p tcp -m tcp --tcp-flags ALL ALL -j DROP
-A INPUT -p tcp -m tcp --tcp-flags ALL NONE -j DROP
-A INPUT -p tcp -m tcp --tcp-flags SYN,RST SYN,RST -j DROP
-A INPUT -p tcp -m tcp --tcp-flags FIN,RST FIN,RST -j DROP
-A INPUT -p tcp -m tcp --tcp-flags ACK,FIN FIN -j DROP 
-A INPUT -p tcp -m tcp --tcp-flags ACK,PSH PSH -j DROP
-A INPUT -p tcp -m tcp --tcp-flags ACK,URG URG -j DROP

# mitigate DOS attacks
-A INPUT -p tcp --tcp-flags RST RST -m hashlimit --hashlimit-above 1/sec --hashlimit-name rst-flood --hashlimit-mode srcip -j REJECT
-A INPUT -p tcp -m hashlimit --hashlimit-above 50/min --hashlimit-burst 20 --hashlimit-name http-dos-block --hashlimit-mode srcip -j BLACKLIST
-A INPUT -p tcp -m hashlimit --hashlimit-above 30/min --hashlimit-name http-dos --hashlimit-mode srcip -j REJECT

# commit
COMMIT

# For more information, read
# https://xakep.ru/2010/11/02/53653/#toc01
# https://serverfault.com/questions/410604/iptables-rules-to-counter-the-most-common-dos-attacks
